 Otherwise indicated differently, all changes made by 
 	Jelmer Vernooij.

Ctrlproxy 3.0.3 UNRELEASED

  BUG FIXES

    * Handle 470 response correctly.

	* Recognize supported channel / user modes correctly.

  INTERNALS

    * Use GIOChannels for reading the motd. 
		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

  PORTABILITY
    
    * Include netinet/in.h in src/utils.c and src/network.c. Required 
	  for building on FreeBSD. Reported by underlig.


Ctrlproxy 3.0.2 2007-04-15

  BUG FIXES

    * Support redirecting 396, 318, 437 and 330 replies. (#84)

	* Fixed redirect warnings for 251, 252, 253, 254, 265 and 266.

    * Don't abort when trying to send auto-AWAY while network is 
	  disconnected.

	* Handle CTRLPROXY command without any arguments. (#92)

    * Fixed crash when using SSL support. (#83)

	* Add support for storing topic set time and topic set by nick (#97).

	* Fixed CTCP source reply URL. (#86)

	* Hide assertion in g_key_file_free in free_config when a network has no associated file (patch by exg)

	* Fix coredump with --init when the default config cannot be opened (patch by exg)

	* Fix crash when CHARSET command fails (#89, #96)

	* Fall back to default charset if client charset can't be set 
		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

	* Fix use of %S segfault in log_custom. (#111)

	* 005-lines are now forwarded to the end-client in a more 
      structural manner. (#94)
	
	* Properly expand target in log_irssi if it is a comma-separated list (#9)
        (based on patch by Korbinian Rosenegger)

    * Properly expand target in log_custom if it is a comma-separated list (#9)
        (patch by Emanuele Giaquinta and Korbinian Rosenegger)

	* Don't append extra colon before RPL_TOPICWHOTIME (Korbinian Rosenegger)

	* Adding timed backlog in BACKLOG command without a channel 
	  (Korbinian Rosenegger)

	* Handle disconnects of clients properly (#108)

	* Fix handling of non-UTF8 characters in linestack_file.
